Avoid child tag being overlapped

--- a/less/forum/DiscussionList.less
+++ b/less/forum/DiscussionList.less
@@ -312,8 +312,8 @@
       border-radius: @border-radius;
       position: absolute;
       width: 100%;
-      height: calc(100% - 10px);
-      bottom: 10px;
+      height: calc(100% - 8px);
+      bottom: 8px;
       left: 0;
       pointer-events:none;
     }
@@ -581,9 +581,11 @@
   }
 }
 .DiscussionListItem.StickyNote,
+.DiscussionListItem.StickyNoteTab,
 .DiscussionListItem.StickyNoteTag,
 .DiscussionListItem.StickyNoteBanner,
 .DiscussionListItem.Basic,
+.DiscussionListItem.BasicTab,
 .DiscussionListItem.BasicTag,
 .DiscussionListItem.BasicBanner,
 .DiscussionListItem.StickyNoteOutline,
@@ -595,8 +597,6 @@
   border-radius: @border-radius !important;
 }
 
-.DiscussionListItem.StickyNoteTab,
-.DiscussionListItem.BasicTab,
 .DiscussionListItem.StickyNoteOutlineTab,
 .DiscussionListItem.BasicOutlineTab {
   border-radius: @border-outline-radius !important;
